# fastapi_routesmanager

./: README.md  pyproject.toml  requirements.txt
fastapi_routesmanager/: __init__.py  exceptions_logger.py  headers_logger.py  routes_manager.py
src/: routes_manager.py
